<resources>
    <string name="app_name">Calcular Area</string>

    <string name="action_settings">Settings</string>
    <string name="base">Base (cm):</string>
    <string name="altura">Altura (cm):</string>
    <string name="lado">Lado (cm):</string>
    <string name="radio">Radio (cm):</string>
    <string name="selec">Hallar el área del:</string>
    <string name="tiang">Triángulo</string>
    <string name="caud">Cuadrado</string>
    <string name="rect">Rectángulo</string>
    <string name="circ">Círculo</string>
    <string name="calc">Calcular</string>
    <string name="area">El Área es (cm^2):</string>
    <string name="result">Resultado...</string>
</resources>
