<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.3"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/base"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:textSize="20dp"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/altura"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:textSize="20dp"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/lado"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:textSize="20dp"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/radio"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:textSize="20dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.6"
            android:orientation="vertical"
            >

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:inputType="numberDecimal"
                android:layout_weight="1"
                android:id="@+id/base"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:inputType="numberDecimal"
                android:layout_weight="1"
                android:id="@+id/altura"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:inputType="numberDecimal"
                android:layout_weight="1"
                android:id="@+id/lado"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:inputType="numberDecimal"
                android:id="@+id/radio"
                android:layout_weight="1"
                />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:layout_weight="1"
       android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.2"
            >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/selec"
                android:gravity="bottom|left"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.4"
            >

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:id="@+id/area">

                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Triángulo"
                    android:textSize="20dp"
                    android:id="@+id/trian"/>

                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Cuadrado"
                    android:textSize="20dp"
                    android:id="@+id/cuad"/>

                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Rectángulo"
                    android:textSize="20dp"
                    android:id="@+id/rect"/>

                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Círculo"
                    android:textSize="20dp"
                    android:id="@+id/circ"/>


            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="top|center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calc"
                android:textSize="20dp"
                android:id="@+id/calc"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/area"
                    android:gravity="center|left"
                    android:textSize="25dp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:id="@+id/result"
                    android:hint="@string/result"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
